[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "spatial_image_ngff"
author = "Matt McCormick"
author-email = "matt.mccormick@kitware.com"
home-page = "https://github.com/spatial-image/spatial-image-ngff"
classifiers = [ "License :: OSI Approved :: Apache Software License",]
description-file = "README.md"

requires = [
    "spatial_image_multiscale",
    "zarr",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest",
    "fsspec",
    "ipfsspec",
]

[tool.black]
line-length = 88
